fixed SVG files. fixed font error codes. fixed line spacing on job title for mobile view. added load-in transition

--- a/src/components/ResumeSection/Work/work.css
+++ b/src/components/ResumeSection/Work/work.css
@@ -32,7 +32,8 @@
   font-size: 16px;
   color: #7B758A;
   margin: 0;
-  line-height: 190%;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .work-date {
